# chatnut

./: .gitignore  AUTHORS  COPYING-CC  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  README.md  chatnut.exe.lnk  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
exe/etc/gtk-3.0/: settings.ini
src/: Makefile  Makefile.am  Makefile.in  chatnut.c  connection.c  connection.h  connection_backend.c  connection_backend.h  connection_raw.c  connection_raw.h  file_operations.c  file_operations.h  gui.c  gui.h  gui_interaction.c  gui_interaction.h  logger.c  logger.h  messaging.h  response_handlers.c  response_handlers.h  socketlayer.c  socketprx.h  user.c  user.h
src/.deps/: message_client-getch.Po  message_client-message_client.Po  message_client-socketlayer.Po
