AC_PREREQ([2.69])
AC_INIT([chatnut], [0.9], [legojonas@gmx.de])
AM_INIT_AUTOMAKE([1.15 -Wall -Werror foreign])	#automake version?

AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])

AC_MSG_NOTICE([Welcome to chatnut configure!])
AC_PROG_CC

AC_CONFIG_FILES([
	Makefile
	src/Makefile
])

AC_OUTPUT
